# llama.cpp

./: .gitignore  Makefile
examples/: CMakeLists.txt
examples/redpajama/: CMakeLists.txt  README.md
examples/redpajama/scripts/: install-RedPajama-INCITE-Chat-7B-v0.1.sh
